<resources>
    <string name="app_name">AppNote</string>
    <string name="developped_by_aya_amp_maria"><![CDATA[developped by Aya & Maria]]></string>
    <string name="your_simple_way_to_stay_orgnized">Your simple way to stay orgnized</string>
    <string name="mynoteapp">MyNoteApp</string>
    <string name="passsword">Password</string>
    <string name="create_account">Create Account</string>
    <string name="create_accountt">create account</string>
    <string name="name">Name</string>
    <string name="join_mynote_and_start_organizing">join MyNote and start organizing</string>
    <string name="todo">TODO</string>
    <string name="already_have_an_account_login">already have an account? Login</string>
    <string name="welcome">Welcome !</string>
    <string name="log_in_and_write_your_notes">Log in and write your notes !</string>
    <string name="namee">Name</string>
    <string name="log_in_your_account">Log In Your Account</string>
    <string name="log_in">Log In</string>
    <string name="already_have_an_account_sign_in">already have an account? Sign In</string>
    <string name="email">email</string>
    <string name="mynote">MyNote</string>
    <string name="_0_notes">0 notes</string>
    <string name="m">M</string>
    <string name="search_notes">search notes ...</string>
    <string name="no_notes_yet">no notes yet</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="categories">Categories</string>
    <string name="profile">Profile</string>
    <string name="new_note" />
    <string name="work_important_idea">work important idea</string>
    <string name="b">b</string>
    <string name="crowns_separated_by_commas">crowns deparated by comma</string>
    <string name="arrow">arrow</string>
    <string name="personal">personal</string>
    <string name="category">category</string>
    <string name="start_typing">start typing</string>
    <string name="list">▦</string>
    <string name="i">𝐼</string>
    <string name="symbols"><![CDATA[<>]]></string>
    <string name="emaill">email</string>
    <string name="create_accountttt">create account</string>
    <string name="already_have_an_account_loginn">already have an account? Login</string>
    <string name="join_mynote_and_start_organizingg">join MyNote and start organizing</string>
    <string name="mynotee">MyNote</string>
    <string name="_0_notess">0 notes</string>
    <string name="search_notess">search notes ...</string>
    <string name="no_notes_yett">no notes yet</string>
    <string name="start_organizing_your_throughts_by_creating_your_first_note">Start organizing your throughts by creating your first note</string>
    <string name="create_note">+ create note</string>
    <string name="mm">M</string>
    <string name="back">Back</string>
    <string name="profile_amp_settings"><![CDATA[Profile & Settings]]></string>
    <string name="mmm">M</string>
    <string name="a">A</string>
    <string name="aya">Aya</string>
    <string name="ayaboulabeiz_gmail_com">ayaboulabeiz@gmail.com</string>
    <string name="_0">0</string>
    <string name="notes">Notes</string>
    <string name="_00">0</string>
    <string name="categoriese">Categories</string>
    <string name="pinned">Pinned</string>
    <string name="_000">0</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="disabled">Disabled</string>
    <string name="sync_status">Sync Status</string>
    <string name="all_changes_saved">All changes saved</string>
    <string name="sign_out">Sign Out</string>
    <string name="mynote_pro_v1_0_0">MyNote Pro v1.0.0</string>
    <string name="arrowww">▾</string>
    <string name="my_note_app">My Note App</string>
    <string name="_1_note">1 note</string>
    <string name="aaa">A</string>
    <string name="ssearch_notes">Search notes...</string>
    <string name="add_note">add note</string>
</resources>